# aatetris

./: .gitignore  CMakeLists.txt  CMakePresets.json  build-cmake.sh
src/: CMakeLists.txt  version.h
src/draw/: CMakeLists.txt
src/game/: CMakeLists.txt  tetris.c
src/input/: CMakeLists.txt
src/menu/: CMakeLists.txt
src/netw/: CMakeLists.txt
src/textgfx/: CMakeLists.txt  resize.c
